// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge renders correctly prominence default 1`] = `
<DocumentFragment>
  .css-17bgpzb-StyledText-StyledSpan {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  text-transform: uppercase;
  font-size: 12px;
  color: inherit;
  color: #3f4250;
  background: #f9f9fa;
  border: 1px solid #d9dadd;
}

<span
    class="ej33bna0 css-17bgpzb-StyledText-StyledSpan e13y3mga0"
  >
    Sample badge
  </span>
</DocumentFragment>
`;

exports[`Badge renders correctly prominence strong 1`] = `
<DocumentFragment>
  .css-fntb0a-StyledText-StyledSpan {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  text-transform: uppercase;
  font-size: 12px;
  color: inherit;
  color: #ffffff;
  background: #151a2d;
  border: 1px solid #151a2d;
}

<span
    class="ej33bna0 css-fntb0a-StyledText-StyledSpan e13y3mga0"
  >
    Sample badge
  </span>
</DocumentFragment>
`;

exports[`Badge renders correctly sentiment danger 1`] = `
<DocumentFragment>
  .css-vouq2z-StyledText-StyledSpan {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  text-transform: uppercase;
  font-size: 12px;
  color: inherit;
  color: #b3144d;
  background: #ffebf2;
  border: 1px solid #ffebf2;
}

<span
    class="ej33bna0 css-vouq2z-StyledText-StyledSpan e13y3mga0"
  >
    Sample badge
  </span>
</DocumentFragment>
`;

exports[`Badge renders correctly sentiment info 1`] = `
<DocumentFragment>
  .css-1wznsbi-StyledText-StyledSpan {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  text-transform: uppercase;
  font-size: 12px;
  color: inherit;
  color: #005da3;
  background: #e0f2ff;
  border: 1px solid #e0f2ff;
}

<span
    class="ej33bna0 css-1wznsbi-StyledText-StyledSpan e13y3mga0"
  >
    Sample badge
  </span>
</DocumentFragment>
`;

exports[`Badge renders correctly sentiment neutral 1`] = `
<DocumentFragment>
  .css-17bgpzb-StyledText-StyledSpan {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  text-transform: uppercase;
  font-size: 12px;
  color: inherit;
  color: #3f4250;
  background: #f9f9fa;
  border: 1px solid #d9dadd;
}

<span
    class="ej33bna0 css-17bgpzb-StyledText-StyledSpan e13y3mga0"
  >
    Sample badge
  </span>
</DocumentFragment>
`;

exports[`Badge renders correctly sentiment primary 1`] = `
<DocumentFragment>
  .css-q6guov-StyledText-StyledSpan {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  text-transform: uppercase;
  font-size: 12px;
  color: inherit;
  color: #641cb3;
  background: #f1eefc;
  border: 1px solid #f1eefc;
}

<span
    class="ej33bna0 css-q6guov-StyledText-StyledSpan e13y3mga0"
  >
    Sample badge
  </span>
</DocumentFragment>
`;

exports[`Badge renders correctly sentiment secondary 1`] = `
<DocumentFragment>
  .css-ixv5yo-StyledText-StyledSpan {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  text-transform: uppercase;
  font-size: 12px;
  color: inherit;
  color: #ac22e7;
  background: #f9ebff;
  border: 1px solid #f9ebff;
}

<span
    class="ej33bna0 css-ixv5yo-StyledText-StyledSpan e13y3mga0"
  >
    Sample badge
  </span>
</DocumentFragment>
`;

exports[`Badge renders correctly sentiment success 1`] = `
<DocumentFragment>
  .css-12wioen-StyledText-StyledSpan {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  text-transform: uppercase;
  font-size: 12px;
  color: inherit;
  color: #22674e;
  background: #daf6ec;
  border: 1px solid #daf6ec;
}

<span
    class="ej33bna0 css-12wioen-StyledText-StyledSpan e13y3mga0"
  >
    Sample badge
  </span>
</DocumentFragment>
`;

exports[`Badge renders correctly sentiment warning 1`] = `
<DocumentFragment>
  .css-kkhzbd-StyledText-StyledSpan {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  text-transform: uppercase;
  font-size: 12px;
  color: inherit;
  color: #7c5400;
  background: #fff6e6;
  border: 1px solid #fff6e6;
}

<span
    class="ej33bna0 css-kkhzbd-StyledText-StyledSpan e13y3mga0"
  >
    Sample badge
  </span>
</DocumentFragment>
`;

exports[`Badge renders correctly size large 1`] = `
<DocumentFragment>
  .css-78r57r-StyledText-StyledSpan {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 32px;
  text-transform: uppercase;
  font-size: 14px;
  color: inherit;
  color: #3f4250;
  background: #f9f9fa;
  border: 1px solid #d9dadd;
}

<span
    class="ej33bna0 css-78r57r-StyledText-StyledSpan e13y3mga0"
  >
    Sample badge
  </span>
</DocumentFragment>
`;

exports[`Badge renders correctly size medium 1`] = `
<DocumentFragment>
  .css-17bgpzb-StyledText-StyledSpan {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  text-transform: uppercase;
  font-size: 12px;
  color: inherit;
  color: #3f4250;
  background: #f9f9fa;
  border: 1px solid #d9dadd;
}

<span
    class="ej33bna0 css-17bgpzb-StyledText-StyledSpan e13y3mga0"
  >
    Sample badge
  </span>
</DocumentFragment>
`;

exports[`Badge renders correctly size small 1`] = `
<DocumentFragment>
  .css-1vkqu8o-StyledText-StyledSpan {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 8px;
  gap: 4px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 16px;
  text-transform: uppercase;
  font-size: 10px;
  color: inherit;
  color: #3f4250;
  background: #f9f9fa;
  border: 1px solid #d9dadd;
}

<span
    class="ej33bna0 css-1vkqu8o-StyledText-StyledSpan e13y3mga0"
  >
    Sample badge
  </span>
</DocumentFragment>
`;

exports[`Badge renders correctly when disabled 1`] = `
<DocumentFragment>
  .css-z9oxdq-StyledText-StyledSpan {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  text-transform: uppercase;
  font-size: 12px;
  color: inherit;
  color: #727683;
  background: #e9eaeb;
  border: none;
}

<span
    class="ej33bna0 css-z9oxdq-StyledText-StyledSpan e13y3mga0"
  >
    Sample badge
  </span>
</DocumentFragment>
`;

exports[`Badge renders correctly with default values 1`] = `
<DocumentFragment>
  .css-17bgpzb-StyledText-StyledSpan {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  text-transform: uppercase;
  font-size: 12px;
  color: inherit;
  color: #3f4250;
  background: #f9f9fa;
  border: 1px solid #d9dadd;
}

<span
    class="ej33bna0 css-17bgpzb-StyledText-StyledSpan e13y3mga0"
  >
    Sample badge
  </span>
</DocumentFragment>
`;

exports[`Badge renders correctly with icon 1`] = `
<DocumentFragment>
  .css-17bgpzb-StyledText-StyledSpan {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  text-transform: uppercase;
  font-size: 12px;
  color: inherit;
  color: #3f4250;
  background: #f9f9fa;
  border: 1px solid #d9dadd;
}

.css-1ah7xw8-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<span
    class="ej33bna0 css-17bgpzb-StyledText-StyledSpan e13y3mga0"
  >
    <svg
      class="css-1ah7xw8-sizeStyles e1gt4cfo0"
      viewBox="0 0 24 24"
    >
      <path
        d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
      />
    </svg>
    Sample badge
  </span>
</DocumentFragment>
`;
